Parallel migration of modules OKAPI-939 (#1210)
2nd round of change with fixes for optional circular dependencies.
A real case is mod-source-record-manager + mod-source-record-storage.
mod-source-record-manager uses many interfaces from storage, but
storage has optional dependency from manager.

The fix actually reduces code size, because we don't care about
optional dependencies in activation.